syntax = "proto3";

option java_package ="com.bragainfo";
option java_multiple_files =true;

import "google/protobuf/timestamp.proto";

package com.bragainfo;

service ProductService{
  rpc Create(PersonReq) returns (PersonRes);
  rpc FindById(FindById) returns (PersonRes);
  rpc Delete(FindById) returns (PersonRes);
  rpc FindAll(EmptyReq) returns(ProductRespList);

}

message ProductRespList{
  repeated PersonRes products =1;
}
message  EmptyReq{
}

message PersonReq{
  string name = 1;
  double price = 2;
  int32  quantity_in_stock = 3;
}

message  PersonRes{
  int64 id = 1;
  string name = 2;
  double price = 3;
  int32  quantity_in_stock = 4;
  string createAt =5;
  string updatedAt =6;
  int32 version= 7;

}



message  FindById{
  int64 id =1;
}